# yap

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  dev.sh  flake.nix  pyproject.toml  requirements.txt  yap.py
archive/: REASONING_AND_SEARCH_PLAN.md  og.py
demos/: chrome.md
tests/: test_issue_repro.py  test_keyboard_shortcuts.py  test_loading.py  test_obs.py  test_pure.py  test_push_mode.py
